# spiderfire

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  build.bat  build.ps1  justfile  license.md  readme.md  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/actions/setup/: action.yml
.github/scripts/: macos-linker.sh
.github/workflows/: release.yml  rust.yml
bindings/: .flowconfig  tsconfig.json
bindings/globals/flow/: abort.js.flow  base64.js.flow  clone.js.flow  console.js.flow  encoding.js.flow  fetch.js.flow  file.js.flow  microtasks.js.flow  timers.js.flow  url.js.flow
bindings/globals/flow/lib/: buffer.js.flow
bindings/globals/typescript/: abort.d.ts  base64.ts  clone.d.ts  console.d.ts  encoding.d.ts  fetch.d.ts  file.d.ts  microtasks.d.ts  timers.d.ts  url.d.ts
bindings/modules/flow/: assert.js.flow  fs.js.flow  http.js.flow  path.js.flow  url.js.flow
bindings/modules/typescript/: assert.d.ts  fs.d.ts  http.d.ts  path.d.ts  url.d.ts
cli/: Cargo.toml
cli/src/: cache.rs  config.rs  evaluate.rs  lib.rs  main.rs  repl.rs
cli/src/commands/: cache.rs  eval.rs  mod.rs  repl.rs  run.rs
contribution/: build.md  quick-start.md
docs/: quick-start.md
ion/: Cargo.toml
ion-proc/: Cargo.toml
ion-proc/src/: lib.rs  trace.rs  utils.rs  visitors.rs
ion-proc/src/attribute/: class.rs  function.rs  krate.rs  mod.rs  name.rs  property.rs  trace.rs  value.rs
ion-proc/src/class/: accessor.rs  attribute.rs  automatic.rs  constructor.rs  method.rs  mod.rs  operations.rs  property.rs  statics.rs  struct.rs
ion-proc/src/class/impl/: mod.rs  spec.rs
ion-proc/src/function/: attribute.rs  inner.rs  mod.rs  parameter.rs  parameters.rs  wrapper.rs
ion-proc/src/jsval/: attribute.rs  from.rs  mod.rs
ion-proc/src/value/: attribute.rs  from.rs  mod.rs  to.rs
ion/examples/macros/: main.rs
ion/examples/macros/from_value/: enumeration.rs  mod.rs  structure.rs
ion/examples/macros/js_class/: mod.rs  toggle.rs
ion/examples/macros/js_fn/: complex.rs  context.rs  integer.rs  mod.rs  object.rs  output.rs  regular.rs  this.rs  varargs.rs
ion/src/: bigint.rs  class.rs  clone.rs  context.rs  conversions.rs  error.rs  exception.rs  flags.rs  future.rs  lib.rs  local.rs  module.rs  print.rs  root.rs  script.rs  specs.rs  stack.rs  symbol.rs  typedarray.rs  utils.rs  value.rs
ion/src/class/: mod.rs  native.rs  reflect.rs
ion/src/conversions/: from_value.rs  into_value.rs  key.rs  mod.rs  to_value.rs
ion/src/conversions/key/: mod.rs  to.rs
ion/src/conversions/value/: from.rs  into.rs  mod.rs  to.rs
ion/src/exceptions/: exception.rs  mod.rs  report.rs
ion/src/format/: array.rs  boxed.rs  class.rs  config.rs  date.rs  descriptor.rs  function.rs  key.rs  mod.rs  object.rs  primitive.rs  promise.rs  regexp.rs  string.rs  symbol.rs  typedarray.rs
ion/src/function/: arguments.rs  closure.rs  function.rs  mod.rs
ion/src/functions/: arguments.rs  closure.rs  function.rs  macros.rs  mod.rs  specs.rs
ion/src/object/: array.rs  date.rs  descriptor.rs  iterator.rs  key.rs  map.rs  mod.rs  object.rs  promise.rs  regexp.rs  set.rs
ion/src/object/typedarray/: buffer.rs  mod.rs  view.rs
ion/src/objects/: array.rs  date.rs  descriptor.rs  iterator.rs  key.rs  map.rs  mod.rs  object.rs  promise.rs  regexp.rs  set.rs  typedarray.rs
ion/src/objects/typedarray/: buffer.rs  mod.rs  view.rs
ion/src/root/: heap.rs  local.rs  mod.rs
ion/src/spec/: function.rs  mod.rs  property.rs
ion/src/string/: byte.rs  external.rs  mod.rs
ion/src/types/: array.rs  mod.rs  string.rs  types.rs  values.rs
ion/tests/: rooting.rs
ion/tests/conversions/: from.rs
ion/tests/objects/: array.rs  date.rs  object.rs
modules/: Cargo.toml
modules/src/: lib.rs
modules/src/assert/: assert.d.ts  assert.js  assert.js.flow  assert.rs  mod.rs
modules/src/fs/: dir.rs  fs.d.ts  fs.js  fs.js.flow  fs.rs  fs_sync.js  handle.rs  mod.rs
modules/src/http/: client.rs  header.rs  http.js  http.rs  mod.rs  network.rs  options.rs  request.rs  response.rs
modules/src/path/: mod.rs  path.d.ts  path.js  path.rs
modules/src/url/: mod.rs  search_params.rs  url.js  url.js.flow  url.rs
modules/tests/: assert.rs
modules/tests/scripts/: assert.js
modules/tests/scripts/assert/: equals.js  fail.js  ok.js  throws.js
modules/tests/scripts/assert/failure/: assert.js  debug-assert.js
modules/tests/scripts/assert/success/: assert.js  debug-assert.js
runtime/: Cargo.toml
runtime/src/: config.rs  init.rs  lib.rs  microtask_queue.rs  modules.rs  promise.rs  runtime.rs  script.rs  typescript.rs
runtime/src/cache/: cache.rs  map.rs  mod.rs
runtime/src/event_loop/: future.rs  macrotasks.rs  microtasks.rs  mod.rs
runtime/src/globals/: abort.rs  base64.rs  clone.rs  console.rs  encoding.rs  microtasks.rs  mod.rs  timers.rs
runtime/src/globals/console/: format.rs  mod.rs  table.rs
runtime/src/globals/encoding/: decode.rs  decoder.rs  encode.rs  encoder.rs  mod.rs
runtime/src/globals/fetch/: body.rs  client.rs  header.rs  mod.rs  network.rs  response.rs
runtime/src/globals/fetch/request/: mod.rs  options.rs
runtime/src/globals/fetch/response/: body.rs  mod.rs  options.rs
runtime/src/globals/file/: blob.rs  mod.rs  reader.rs
runtime/src/globals/streams/: mod.rs
runtime/src/globals/streams/readable/: controller.rs  mod.rs  reader.rs  source.rs
runtime/src/globals/url/: mod.rs  search_params.rs
runtime/src/module/: loader.rs  mod.rs  standard.rs
runtime/src/modules/: handler.rs  loader.rs  mod.rs  standard.rs
runtime/tests/: console.rs  eval.rs  modules.rs  test.rs
runtime/tests/scripts/: console.js  module-export.js  module-import.js
src/: config.rs  lib.rs  main.rs
src/cli/: mod.rs  repl.rs  run.rs
src/modules/: fs.rs  mod.rs
src/modules/js/: fs.js
src/runtime/: init.rs  mod.rs  modules.rs
src/runtime/globals/: console.rs  mod.rs
src/runtime/jsapi_utils/: array.rs  cmp.rs  eval.rs  exception.rs  mod.rs  print.rs  string.rs
src/utils/: indents.rs  mod.rs
testing/: main.js  module.js
tests/: main.js  main.rs  module.rs  tester.rs
(+5 files in other folders)
