[workspace]
members = [
	"cli",
	"ion",
	"ion-proc",
	"modules",
	"runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
ion-proc = { path = "./ion-proc" }
ion = { path = "./ion" }
runtime = { path = "./runtime" }
modules = { path = "./modules" }

arrayvec = "0.7.6"
async-recursion = "1.1.1"
base64 = "0.21.7"
bitflags = "2.8.0"
bytes = "1.10.0"
byteorder = "1.5.0"
bytemuck = "1.21.0"
cc = "=1.1.31" # ring Build Failure rust-lang/cc-rs#1278
clap = "4.5.30"
colored = "2.2.0"
const_format = "0.2.34"
convert_case = "0.7.1"
data-url = "0.3.1"
dirs = "6.0.0"
dunce = "1.0.5"
encoding_rs = "0.8.35"
form_urlencoded = "1.2.1"
futures = "0.3.31"
headers = "0.4.0"
http = "1.2.0"
http-body-util = "0.1.2"
humansize = "2.1.3"
hyper = "1.6.0"
hyper-util = "0.1.10"
idna = "1.0.3"
indent = "0.1.1"
indexmap = "2.7.1"
itoa = "1.0.14"
mime = "0.3.17"
mozjs = { package = "mozjs", git = "https://github.com/servo/mozjs" }
pin-project = "1.1.9"
prettyplease = "0.2.29"
proc-macro2 = "1.0.93"
quote = "1.0.38"
rustyline-derive = "0.11.0"
sha3 = "0.10.8"
sourcemap = "9.1.2"
swc_core = "14.1.0"
syn = "2.0.98"
sys-locale = "0.3.2"
term-table = "1.4.0"
typed-arena = "2.0.2"
uri-url = "0.3.0"
url = "2.5.4"
uuid = "1.14.0"
utf16string = "0.2.0"
windows = "0.59.0"

[workspace.dependencies.chrono]
version = "0.4.39"
default-features = false
features = ["clock", "std"]

[workspace.dependencies.hyper-rustls]
version = "0.27.5"
default-features = false

[workspace.dependencies.rustyline]
version = "15.0.0"
default-features = false

[workspace.dependencies.tokio]
version = "1.43.0"
default-features = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny" # Expansion of thread_local has a #[deny]

[workspace.lints.clippy]
as_underscore = "forbid"
bool_to_int_with_if = "forbid"
cast_lossless = "forbid"
cast_ptr_alignment = "forbid"
cloned_instead_of_copied = "forbid"
clone_on_ref_ptr = "forbid"
default_trait_access = "forbid"
enum_glob_use = "forbid"
match_bool = "forbid"
ptr_as_ptr = "forbid"
ptr_cast_constness = "forbid"
ref_as_ptr = "forbid"
transmute_ptr_to_ptr = "deny"
uninlined_format_args = "forbid"

[profile.release]
lto = "fat"
strip = "symbols"
