[package]
name = "cli"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
rustyline = "12.0.0"
rustyline-derive = "0.9.0"

colored.workspace = true
dunce.workspace = true
ion.workspace = true
modules.workspace = true
mozjs.workspace = true
sourcemap.workspace = true

[dependencies.clap]
version = "4.4.8"
features = ["derive"]

[dependencies.runtime]
workspace = true
features = ["fetch"]

[dependencies.tokio]
workspace = true
features = ["macros", "rt"]

[features]
debugmozjs = ["ion/debugmozjs"]

[[bin]]
name = "cli"
test = false
