[package]
name = "cli"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
humansize = "2.1.3"
rustyline-derive = "0.10.0"

colored.workspace = true
dunce.workspace = true
ion.workspace = true
modules.workspace = true
mozjs.workspace = true
sourcemap.workspace = true

[dependencies.clap]
version = "4.5.0"
features = ["derive"]

[dependencies.runtime]
workspace = true
features = ["fetch"]

[dependencies.rustyline]
version = "13.0.0"
default-features = false

[dependencies.tokio]
workspace = true
features = ["macros", "rt"]

[features]
debugmozjs = ["ion/debugmozjs"]
