[package]
name = "cli"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
colored.workspace = true
dunce.workspace = true
humansize.workspace = true
ion.workspace = true
modules.workspace = true
mozjs.workspace = true
rustyline-derive.workspace = true
sourcemap.workspace = true

[dependencies.clap]
workspace = true
features = ["derive"]

[dependencies.runtime]
workspace = true
features = ["fetch"]

[dependencies.rustyline]
workspace = true
default-features = false

[dependencies.tokio]
workspace = true
features = ["macros", "rt"]

[features]
debugmozjs = ["ion/debugmozjs"]

[lib]
doctest = false
