[package]
name = "ion-proc"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
convert_case = "0.6.0"
quote = "1.0.33"
prettyplease = "0.2.15"
proc-macro2 = "1.0.70"

[dependencies.syn]
version = "2.0.39"
features = ["visit-mut"]

[lints]
workspace = true

[lib]
proc-macro = true
test = false
doctest = false
