[package]
name = "ion-proc"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
convert_case = "0.6.0"
quote = "1.0.35"
prettyplease = "0.2.16"
proc-macro2 = "1.0.78"

[dependencies.syn]
version = "2.0.48"
features = ["visit-mut"]

[lints]
workspace = true

[lib]
proc-macro = true
test = false
doctest = false
