[package]
name = "ion-proc"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
convert_case.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true

[dependencies.syn]
workspace = true
features = ["visit-mut"]

[lints]
workspace = true

[lib]
proc-macro = true

doctest = false
test = false
