[package]
name = "ion"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
bitflags = "2.4.2"
byteorder = "1.5.0"
bytemuck = "1.14.3"
itoa = "1.0.10"
typed-arena = "2.0.2"
utf16string = "0.2.0"

arrayvec.workspace = true
colored.workspace = true
chrono.workspace = true
encoding_rs.workspace = true
indent.workspace = true
mozjs.workspace = true

[dependencies.futures]
workspace = true
features = ["executor"]

[dependencies.ion-proc]
workspace = true
optional = true

[dependencies.sourcemap]
workspace = true
optional = true

[features]
debugmozjs = ["mozjs/debugmozjs"]
macros = ["dep:ion-proc"]
sourcemap = ["dep:sourcemap"]

[lib]
doctest = false

[[test]]
name = "conversions-from-value"
path = "tests/conversions/from.rs"
[[test]]
name = "rooting"
path = "tests/rooting.rs"
[[test]]
name = "array"
path = "tests/objects/array.rs"
[[test]]
name = "date"
path = "tests/objects/date.rs"
[[test]]
name = "object"
path = "tests/objects/object.rs"

[[example]]
name = "macros"
crate-type = ["lib"]
required-features = ["macros"]
