[package]
name = "modules"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
idna = "0.5.0"

futures.workspace = true
mozjs.workspace = true
url.workspace = true
runtime.workspace = true

[dependencies.ion]
workspace = true
features = ["macros"]


[dependencies.tokio]
workspace = true
features = ["fs"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["fs"]

[dev-dependencies.tokio]
workspace = true
features = ["macros", "rt"]

[features]
debugmozjs = ["ion/debugmozjs"]

[lib]
test = false
doctest = false
