[package]
name = "modules"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
futures.workspace = true
idna.workspace = true
mozjs.workspace = true
url.workspace = true
runtime.workspace = true

[dependencies.ion]
workspace = true
features = ["macros"]

[dependencies.tokio]
workspace = true
features = ["fs"]

[dependencies.tokio-stream]
workspace = true
features = ["fs"]

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = ["Win32_Storage_FileSystem"]

[dev-dependencies.tokio]
workspace = true
features = ["macros", "rt"]

[features]
debugmozjs = ["ion/debugmozjs"]

[lib]
doctest = false
test = false
