[package]
name = "runtime"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
base64 = "0.21.5"
data-url = "0.3.1"
dirs = "5.0.1"
form_urlencoded = "1.2.1"
indexmap = "2.1.0"
sha3 = "0.10.8"
term-table = "1.3.2"
uri-url = "0.2.0"

bytes.workspace = true
chrono.workspace = true
dunce.workspace = true
encoding_rs.workspace = true
futures.workspace = true
indent.workspace = true
mozjs.workspace = true
sourcemap.workspace = true
url.workspace = true

[dependencies.async-recursion]
version = "1.0.5"
optional = true

[dependencies.const_format]
version = "0.2.32"
optional = true

[dependencies.http]
version = "0.2.11"
optional = true

[dependencies.hyper]
version = "0.14.28"
features = ["client", "http1", "tcp"]
optional = true

[dependencies.hyper-rustls]
version = "0.24.2"
default-features = false
features = ["http1", "tls12", "webpki-tokio"]
optional = true

[dependencies.ion]
workspace = true
features = ["macros", "sourcemap"]

[dependencies.mime]
version = "0.3.17"
optional = true

[dependencies.swc_core]
version = "0.87.6"
features = [
	"common",
	"common_sourcemap",
	"common_tty",
	"ecma_ast",
	"ecma_codegen",
	"ecma_parser",
	"ecma_transforms",
	"ecma_parser_typescript",
	"ecma_transforms_typescript",
	"ecma_visit",
]

[dependencies.sys-locale]
version = "0.3.1"
optional = true

[dependencies.tokio]
workspace = true
features = ["sync"]

[features]
debugmozjs = ["ion/debugmozjs"]
fetch = [
	"dep:async-recursion",
	"dep:const_format",
	"dep:http",
	"dep:hyper",
	"dep:hyper-rustls",
	"dep:mime",
	"dep:sys-locale",
]

[lints]
workspace = true

[lib]
test = false
doctest = false
