[package]
name = "runtime"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
base64 = "0.22.1"
data-url = "0.3.1"
dirs = "5.0.1"
form_urlencoded = "1.2.1"
indexmap = "2.2.2"
sha3 = "0.10.8"
term-table = "1.3.2"
uri-url = "0.3.0"

bytes.workspace = true
chrono.workspace = true
dunce.workspace = true
encoding_rs.workspace = true
futures.workspace = true
indent.workspace = true
mozjs.workspace = true
sourcemap.workspace = true
url.workspace = true

[dependencies.arrayvec]
workspace = true
optional = true

[dependencies.async-recursion]
version = "1.0.5"
optional = true

[dependencies.const_format]
version = "0.2.32"
optional = true

[dependencies.headers]
version = "0.4.0"
optional = true

[dependencies.http]
version = "1.0.0"
optional = true

[dependencies.http-body-util]
version = "0.1.0"
optional = true

[dependencies.hyper]
version = "1.1.0"
optional = true

[dependencies.hyper-util]
version = "0.1.3"
optional = true
features = ["client-legacy", "http1"]

[dependencies.hyper-rustls]
version = "0.27.2"
optional = true
default-features = false
features = ["http1", "ring", "tls12", "webpki-tokio"]

[dependencies.ion]
workspace = true
features = ["macros", "sourcemap"]

[dependencies.mime]
version = "0.3.17"
optional = true

[dependencies.pin-project]
version = "1.1.4"
optional = true

[dependencies.swc_core]
version = "0.100.6"
features = [
	"common",
	"common_sourcemap",
	"common_tty",
	"ecma_ast",
	"ecma_codegen",
	"ecma_parser",
	"ecma_transforms",
	"ecma_parser_typescript",
	"ecma_transforms_typescript",
	"ecma_visit",
]

[dependencies.sys-locale]
version = "0.3.1"
optional = true

[dependencies.tokio]
workspace = true
features = ["sync"]

[dependencies.uuid]
version = "1.10.0"
features = [
	"v4",
	"fast-rng"
]

[features]
debugmozjs = ["ion/debugmozjs"]
fetch = [
	"dep:arrayvec",
	"dep:async-recursion",
	"dep:const_format",
	"dep:headers",
	"dep:http",
	"dep:http-body-util",
	"dep:hyper",
	"dep:hyper-util",
	"dep:hyper-rustls",
	"dep:mime",
	"dep:pin-project",
	"dep:sys-locale",
]

[lints]
workspace = true

[lib]
test = false
doctest = false
