[package]
name = "runtime"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors = ["Redfire <redfire75369@hotmail.com>"]

[dependencies]
ascii_table.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
data-url.workspace = true
dirs.workspace = true
dunce.workspace = true
either.workspace = true
encoding_rs.workspace = true
form_urlencoded.workspace = true
futures.workspace = true
indent.workspace = true
indexmap.workspace = true
mime.workspace = true
mozjs.workspace = true
sha3.workspace = true
sourcemap.workspace = true
uri-url.workspace = true
url.workspace = true

[dependencies.arrayvec]
workspace = true
optional = true

[dependencies.async-recursion]
workspace = true
optional = true

[dependencies.const_format]
workspace = true
optional = true

[dependencies.headers]
workspace = true
optional = true

[dependencies.http]
workspace = true
optional = true

[dependencies.http-body-util]
workspace = true
optional = true

[dependencies.hyper]
workspace = true
optional = true

[dependencies.hyper-util]
workspace = true
optional = true
features = ["client-legacy", "http1"]

[dependencies.hyper-rustls]
workspace = true
optional = true
features = ["http1", "ring", "tls12", "webpki-tokio"]

[dependencies.ion]
workspace = true
features = ["macros", "sourcemap"]

[dependencies.pin-project]
workspace = true
optional = true

[dependencies.swc_core]
workspace = true
features = [
	"common",
	"common_sourcemap",
	"common_tty",
	"ecma_ast",
	"ecma_codegen",
	"ecma_parser",
	"ecma_transforms",
	"ecma_parser_typescript",
	"ecma_transforms_typescript",
	"ecma_visit",
]

[dependencies.sys-locale]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
features = ["sync"]

[dependencies.uuid]
workspace = true
features = [
	"v4",
	"fast-rng"
]

[features]
default = ["tokio-promise"]
debugmozjs = ["ion/debugmozjs"]
fetch = [
	"dep:arrayvec",
	"dep:async-recursion",
	"dep:const_format",
	"dep:headers",
	"dep:http",
	"dep:http-body-util",
	"dep:hyper",
	"dep:hyper-util",
	"dep:hyper-rustls",
	"dep:pin-project",
	"dep:sys-locale",
]
tokio-promise = ["tokio/rt"]

[lints]
workspace = true

[lib]
doctest = false
test = false
